--- a/src/main/resources/com/example/project_ver1/sell-view.fxml
+++ b/src/main/resources/com/example/project_ver1/sell-view.fxml
@@ -7,83 +7,48 @@
 <AnchorPane prefHeight="712.0" prefWidth="1155.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_ver1.controller.OrderController">
     <children>
         <Pane layoutY="1.0" prefHeight="50.0" prefWidth="1155.0" style="-fx-background-color: #002d40;" />
-        <Button fx:id="back" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="back" />
-        <GridPane hgap="5.0" layoutX="27.0" layoutY="72.0" prefHeight="344.0" prefWidth="682.0" vgap="5.0">
+        <GridPane fx:id="grid" hgap="5.0" layoutX="27.0" layoutY="72.0" prefHeight="267.0" prefWidth="438.0" style="-fx-background-color: #6fbf82;" vgap="5.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="136.0" minWidth="10.0" prefWidth="130.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="224.0" minWidth="10.0" prefWidth="136.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="364.0" minWidth="10.0" prefWidth="144.0" />
+
 
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="60.79999999999999" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="60.79999999999999" vgrow="SOMETIMES" />
+
                 <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="60.79999999999999" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="60.79999999999999" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="60.79999999999999" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="60.79999999999999" vgrow="SOMETIMES" />
             </rowConstraints>
-         <children>
-
-            <ToggleButton mnemonicParsing="false" prefHeight="53.0" prefWidth="133.0" text="Gin" />
-            <ToggleButton layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="133.0" text="Whisky" GridPane.rowIndex="1" />
-            <ToggleButton layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="133.0" text="Champane" GridPane.rowIndex="2" />
-            <ToggleButton layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="133.0" text="Tiger" GridPane.rowIndex="3" />
-            <ToggleButton layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="133.0" text="Corana" GridPane.rowIndex="4" />
-            <ToggleButton layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="133.0" text="Pimm's" GridPane.rowIndex="5" />
-         </children>
         </GridPane>
-        <Pane layoutX="719.0" layoutY="51.0" prefHeight="664.0" prefWidth="436.0" style="-fx-background-color: #9697e9;">
+        <Pane layoutX="515.0" layoutY="51.0" prefHeight="664.0" prefWidth="640.0" style="-fx-background-color: #9697e9;">
             <children>
-                <Label layoutX="59.0" layoutY="34.0" text="Thông Tin Hóa Đơn Order">
+                <Label layoutX="106.0" layoutY="37.0" text="Thông Tin Hóa Đơn Order" textFill="WHITE">
                     <font>
-                        <Font name="System Bold" size="24.0" />
+                        <Font name="System Bold" size="35.0" />
                     </font>
                 </Label>
-                <TextField layoutX="161.0" layoutY="169.0" prefHeight="26.0" prefWidth="75.0" />
-                <TextField layoutX="245.0" layoutY="170.0" prefHeight="25.0" prefWidth="82.0" />
-                <Button layoutX="158.0" layoutY="440.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="128.0" text="Hoàn thành " />
-                <Button layoutX="127.0" layoutY="502.0" mnemonicParsing="false" text="Xuất Hóa Đơn">
+
+                <TextField fx:id="id_Soluong" layoutX="23.0" layoutY="368.0" prefHeight="42.0" prefWidth="244.0" promptText="Số lượng" />
+                <TextField fx:id="id_tenSP" layoutX="23.0" layoutY="241.0" prefHeight="42.0" prefWidth="244.0" promptText="Tên sản phẩm" />
+                <Button fx:id="id_addProduct" layoutX="12.0" layoutY="608.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="128.0" text="Thêm sản phẩm" />
+                <Button layoutX="153.0" layoutY="608.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="126.0" text="Xuất Hóa Đơn">
                     <font>
-                        <Font size="24.0" />
+                        <Font size="13.0" />
                     </font>
                 </Button>
-                <TextField layoutX="335.0" layoutY="170.0" prefHeight="25.0" prefWidth="75.0" />
-                <TextField layoutX="346.0" layoutY="344.0" prefHeight="25.0" prefWidth="75.0" />
-            <ListView layoutX="14.0" layoutY="169.0" prefHeight="200.0" prefWidth="138.0" />
-            <Label layoutX="169.0" layoutY="146.0" text="Số lượng ">
+                <TextField fx:id="id_gia" layoutX="23.0" layoutY="306.0" prefHeight="42.0" prefWidth="244.0" promptText="Giá" />
+            <Label layoutX="23.0" layoutY="498.0" text="Tổng tiền:" textFill="WHITE">
                <font>
-                  <Font size="14.0" />
+                  <Font name="Arial Bold" size="22.0" />
                </font>
             </Label>
-            <Label layoutX="274.0" layoutY="146.0" text="Size">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="346.0" layoutY="146.0" text="Đơn giá">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="353.0" layoutY="323.0" text="Tổng Tiền">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="227.0" layoutY="323.0" text="Số Hóa Đơn">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <TextField layoutX="222.0" layoutY="344.0" prefHeight="25.0" prefWidth="83.0" />
-            <Label layoutX="18.0" layoutY="146.0" text="Danh Sách sản phẩm">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
+            <ListView layoutX="287.0" layoutY="122.0" prefHeight="530.0" prefWidth="341.0" style="-fx-background-color: #89b9d0;" />
+            <TextField fx:id="id_SoHoaDon" layoutX="23.0" layoutY="184.0" prefHeight="42.0" prefWidth="244.0" promptText="Số hóa đơn" />
+            <ComboBox fx:id="id_size" layoutX="24.0" layoutY="436.0" prefHeight="34.0" prefWidth="128.0" promptText="Size" />
+            <Button fx:id="id_btnCreateProduct" layoutX="23.0" layoutY="133.0" mnemonicParsing="false" onAction="#createOrder" prefHeight="34.0" prefWidth="106.0" text="Tạo hóa đơn" />
             </children></Pane>
     </children>
 </AnchorPane>
