--- a/src/main/resources/com/example/project_ver1/sell-view.fxml
+++ b/src/main/resources/com/example/project_ver1/sell-view.fxml
@@ -7,7 +7,7 @@
 <AnchorPane prefHeight="712.0" prefWidth="1155.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_ver1.controller.OrderController">
     <children>
         <Pane layoutY="1.0" prefHeight="50.0" prefWidth="1155.0" style="-fx-background-color: #002d40;" />
-        <GridPane fx:id="grid" hgap="5.0" layoutX="27.0" layoutY="72.0" prefHeight="267.0" prefWidth="438.0" style="-fx-background-color: #6fbf82;" vgap="5.0">
+        <GridPane fx:id="grid" hgap="5.0" layoutY="51.0" prefHeight="267.0" prefWidth="329.0" style="-fx-background-color: #6fbf82;" vgap="5.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="136.0" minWidth="10.0" prefWidth="130.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="224.0" minWidth="10.0" prefWidth="136.0" />
@@ -23,32 +23,53 @@
                 <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="60.79999999999999" vgrow="SOMETIMES" />
             </rowConstraints>
         </GridPane>
-        <Pane layoutX="515.0" layoutY="51.0" prefHeight="664.0" prefWidth="640.0" style="-fx-background-color: #9697e9;">
+        <Pane layoutX="329.0" layoutY="51.0" prefHeight="664.0" prefWidth="826.0" style="-fx-background-color: #9697e9;">
             <children>
-                <Label layoutX="106.0" layoutY="37.0" text="Thông Tin Hóa Đơn Order" textFill="WHITE">
+                <Label layoutX="106.0" layoutY="37.0" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="35.0" />
                     </font>
                 </Label>
 
-                <TextField fx:id="id_Soluong" layoutX="23.0" layoutY="368.0" prefHeight="42.0" prefWidth="244.0" promptText="Số lượng" />
-                <TextField fx:id="id_tenSP" layoutX="23.0" layoutY="241.0" prefHeight="42.0" prefWidth="244.0" promptText="Tên sản phẩm" />
-                <Button fx:id="id_addProduct" layoutX="12.0" layoutY="608.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="128.0" text="Thêm sản phẩm" />
-                <Button layoutX="153.0" layoutY="608.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="126.0" text="Xuất Hóa Đơn">
+                <TextField fx:id="id_Soluong" layoutX="23.0" layoutY="368.0" prefHeight="42.0" prefWidth="220.0" promptText="Số lượng" />
+                <TextField fx:id="id_tenSP" layoutX="23.0" layoutY="241.0" prefHeight="42.0" prefWidth="220.0" promptText="Tên sản phẩm" />
+                <Button fx:id="id_addProduct" layoutX="12.0" layoutY="578.0" mnemonicParsing="false" onAction="#addProduct" prefHeight="72.0" prefWidth="113.0" text="Thêm sản phẩm">
+               <font>
+                  <Font name="Arial" size="13.0" />
+               </font></Button>
+                <Button layoutX="153.0" layoutY="578.0" mnemonicParsing="false" onAction="#doneBill" prefHeight="72.0" prefWidth="96.0" text="Xuất Hóa Đơn">
                     <font>
                         <Font size="13.0" />
                     </font>
                 </Button>
-                <TextField fx:id="id_gia" layoutX="23.0" layoutY="306.0" prefHeight="42.0" prefWidth="244.0" promptText="Giá" />
+                <TextField fx:id="id_gia" layoutX="23.0" layoutY="306.0" prefHeight="42.0" prefWidth="220.0" promptText="Giá" />
             <Label layoutX="23.0" layoutY="498.0" text="Tổng tiền:" textFill="WHITE">
                <font>
                   <Font name="Arial Bold" size="22.0" />
                </font>
             </Label>
-            <ListView layoutX="287.0" layoutY="122.0" prefHeight="530.0" prefWidth="341.0" style="-fx-background-color: #89b9d0;" />
-            <TextField fx:id="id_SoHoaDon" layoutX="23.0" layoutY="184.0" prefHeight="42.0" prefWidth="244.0" promptText="Số hóa đơn" />
+            <TextField fx:id="id_SoHoaDon" layoutX="23.0" layoutY="184.0" prefHeight="42.0" prefWidth="220.0" promptText="Số hóa đơn" />
             <ComboBox fx:id="id_size" layoutX="24.0" layoutY="436.0" prefHeight="34.0" prefWidth="128.0" promptText="Size" />
             <Button fx:id="id_btnCreateProduct" layoutX="23.0" layoutY="133.0" mnemonicParsing="false" onAction="#createOrder" prefHeight="34.0" prefWidth="106.0" text="Tạo hóa đơn" />
+            <Label layoutX="279.0" layoutY="37.0" text="Hoá đơn đặt hàng" textFill="WHITE">
+               <font>
+                  <Font name="Arial Bold" size="46.0" />
+               </font>
+            </Label>
+            <Label layoutX="144.0" layoutY="497.0" text="0" textFill="WHITE">
+               <font>
+                  <Font name="American Typewriter" size="24.0" />
+               </font>
+            </Label>
+            <TableView fx:id="tb_ordetail" layoutX="269.0" layoutY="133.0" prefHeight="533.0" prefWidth="557.0">
+              <columns>
+                <TableColumn fx:id="id_colSoCT" prefWidth="114.0" text="Số chi  tiết" />
+                <TableColumn fx:id="id_ColSoHD" prefWidth="112.0" text="Số hoá đơn" />
+                  <TableColumn fx:id="id_ColMaSp" prefWidth="124.0" text="Mã sản phẩm" />
+                  <TableColumn fx:id="id_ColSoLuong" minWidth="0.0" prefWidth="99.0" text="Số  lượng" />
+                  <TableColumn fx:id="id_ColSize" minWidth="0.0" prefWidth="107.0" text="Size" />
+              </columns>
+            </TableView>
             </children></Pane>
     </children>
 </AnchorPane>
