--- a/src/main/resources/com/example/project_ver1/sell-view.fxml
+++ b/src/main/resources/com/example/project_ver1/sell-view.fxml
@@ -7,7 +7,10 @@
 
 <AnchorPane prefHeight="712.0" prefWidth="1155.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_ver1.controller.OrderController">
     <children>
-        <Pane layoutY="1.0" prefHeight="50.0" prefWidth="1155.0" style="-fx-background-color: #002d40;" />
+        <Pane layoutY="1.0" prefHeight="50.0" prefWidth="1155.0" style="-fx-background-color: #002d40;">
+         <children>
+            <Button layoutX="12.0" layoutY="10.0" mnemonicParsing="false" onAction="#dangXuat" text="Đăng xuất" />
+         </children></Pane>
         <GridPane fx:id="grid" hgap="5.0" layoutY="51.0" prefHeight="664.0" prefWidth="329.0" style="-fx-background-color: #6fbf82;" vgap="5.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="136.0" minWidth="10.0" prefWidth="130.0" />
@@ -72,7 +75,7 @@
                                                 <Font name="Arial Bold" size="22.0" />
                                              </font>
                                           </Label>
-                                          <Label text="0" textFill="WHITE">
+                                          <Label fx:id="total" text="0" textFill="WHITE">
                                              <font>
                                                 <Font name="American Typewriter" size="24.0" />
                                              </font>
@@ -90,6 +93,11 @@
                                                 <Font name="Arial" size="13.0" />
                                              </font>
                                           </Button>
+                                          <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#deleteOrder" prefHeight="72.0" text="Xoá">
+                                             <padding>
+                                                <Insets left="25.0" right="25.0" />
+                                             </padding>
+                                          </Button>
                                        </children>
                                     </HBox>
                                  </children>
@@ -101,11 +109,12 @@
                         </VBox>
                         <TableView fx:id="tb_ordetail" prefHeight="533.0" prefWidth="557.0" HBox.hgrow="ALWAYS">
                           <columns>
-                            <TableColumn fx:id="id_colSoCT" prefWidth="114.0" text="Số chi  tiết" />
-                            <TableColumn fx:id="id_ColSoHD" prefWidth="112.0" text="Số hoá đơn" />
-                              <TableColumn fx:id="id_ColMaSp" prefWidth="124.0" text="Mã sản phẩm" />
-                              <TableColumn fx:id="id_ColSoLuong" minWidth="0.0" prefWidth="99.0" text="Số  lượng" />
-                              <TableColumn fx:id="id_ColSize" minWidth="0.0" prefWidth="107.0" text="Size" />
+                            <TableColumn fx:id="id_colSoCT" prefWidth="33.0" text="#" />
+                            <TableColumn fx:id="id_ColSoHD" prefWidth="88.0" text="Số hoá đơn" />
+                              <TableColumn fx:id="id_ColMaSp" prefWidth="208.0" text="Tên sản phẩm" />
+                              <TableColumn fx:id="id_ColSoLuong" minWidth="0.0" prefWidth="61.0" text="Số  lượng" />
+                              <TableColumn fx:id="id_ColSize" minWidth="0.0" prefWidth="86.0" text="Size" />
+                              <TableColumn fx:id="id_col_gia" prefWidth="98.0" text="Giá" />
                           </columns>
                         </TableView>
                      </children>
